SpringBoot_Backend/argocd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-digital-id-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-digital-id-backend
  template:
    metadata:
      labels:
        app: deployment-digital-id-backend
    spec:
      containers:
      - name: deployment-digital-id-backend
        image: 174391158959.dkr.ecr.us-east-1.amazonaws.com/digital-id:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8383
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deployment-digital-id-backend
    app.kubernetes.io/name: deployment-digital-id-backend
  name: deployment-digital-id-backend
spec:
  ports:
  - name: http
    nodePort: 30006
    port: 80
    protocol: TCP
    targetPort: 8383
  selector:
    # app: deployment-digital-id-backend
    # status:
    #   loadBalancer: {}
    # type: LoadBalancer
    app: deployment-digital-id-backend
  type: NodePort


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-3:174391158959:certificate/12dc5743-3e8d-4d0d-b3e2-4b88e0866ca8
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: deployment-digital-id-backend
    app.kubernetes.io/name: deployment-digital-id-backend
  name: deployment-digital-id-backend-ingress
spec:
  ingressClassName: alb
  rules:
  - host: digital-id-staging.clouddevtools.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: deployment-digital-id-backend
            port:
              name: http
  tls:
  - hosts:
    - digital-id-staging.clouddevtools.com
